syntax = "proto3";
package fusionchain.policy;

import "google/protobuf/any.proto";

option go_package = "github.com/qredo/fusionchain/x/policy/types";

message Policy {
  uint64 id = 1;
  string name = 2;

  // The actual policy informations. It must be one the supported policy types:
  // - BlackbirdPolicy
  google.protobuf.Any policy = 3;
}

message BlackbirdPolicy {
  bytes data = 1;
  map<string, string> participants = 2;
}

message BlackbirdPolicyPayload { bytes witness = 1; }
